--- a/app/src/main/res/layout/activity_call_ended.xml
+++ b/app/src/main/res/layout/activity_call_ended.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
-    tools:context="me.omarahmed.ebtikar.ui.CallEndedActivity">
+    tools:context="me.omarahmed.ebtikar.ui.callended.CallEndedActivity">
 
     <TextView
         android:id="@+id/tv_client_name"
